--- a/.github/workflows/markdownlint.yml
+++ b/.github/workflows/markdownlint.yml
@@ -1,6 +1,10 @@
 name: markdownlint
 
 on:
+  push:
+    branches: [ main ]
+    paths:
+    - '**.md'
   pull_request:
     branches: [ main ]
     paths:
