--- a/test/OpenTelemetry.Contrib.Exporter.Stackdriver.Tests/OpenTelemetry.Contrib.Exporter.Stackdriver.Tests.csproj
+++ b/test/OpenTelemetry.Contrib.Exporter.Stackdriver.Tests/OpenTelemetry.Contrib.Exporter.Stackdriver.Tests.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\OpenTelemetry.Contrib.Exporter.Stackdriver\OpenTelemetry.Exporter.Stackdriver.csproj" />
+    <ProjectReference Include="$(RepoRoot)\src\OpenTelemetry.Contrib.Exporter.Stackdriver\OpenTelemetry.Exporter.Stackdriver.csproj" />
   </ItemGroup>
 
   <ItemGroup>
