--- a/src/OpenTelemetry.Contrib.Instrumentation.Runtime/OpenTelemetry.Instrumentation.Runtime.csproj
+++ b/src/OpenTelemetry.Contrib.Instrumentation.Runtime/OpenTelemetry.Instrumentation.Runtime.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFrameworks>netstandard2.0;net461;netcoreapp3.1;net6.0</TargetFrameworks>
         <Description>dotnet runtime instrumentation for OpenTelemetry .NET</Description>
-        <PackageTags>$(PackageTags);OpenTelemetry;runtime</PackageTags>
+        <PackageTags>$(PackageTags);runtime</PackageTags>
         <MinVerTagPrefix>Instrumentation.Runtime-</MinVerTagPrefix>
     </PropertyGroup>
 
