--- a/examples/wcf/client-netframework/App.config
+++ b/examples/wcf/client-netframework/App.config
@@ -3,7 +3,7 @@
   <system.serviceModel>
     <extensions>
       <behaviorExtensions>
-        <add name="telemetryExtension" type="OpenTelemetry.Contrib.Instrumentation.Wcf.TelemetryEndpointBehaviorExtensionElement, OpenTelemetry.Contrib.Instrumentation.Wcf"	/>
+        <add name="telemetryExtension" type="OpenTelemetry.Instrumentation.Wcf.TelemetryEndpointBehaviorExtensionElement, OpenTelemetry.Instrumentation.Wcf" />
       </behaviorExtensions>
     </extensions>
     <behaviors>
