--- a/examples/wcf/server-netframework/Examples.Wcf.Server.NetFramework.csproj
+++ b/examples/wcf/server-netframework/Examples.Wcf.Server.NetFramework.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net46</TargetFramework>
+    <TargetFramework>net462</TargetFramework>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\OpenTelemetry.Contrib.Instrumentation.Wcf\OpenTelemetry.Contrib.Instrumentation.Wcf.csproj" />
+    <ProjectReference Include="$(RepoRoot)\src\OpenTelemetry.Contrib.Instrumentation.Wcf\OpenTelemetry.Instrumentation.Wcf.csproj" />
   </ItemGroup>
 
   <ItemGroup>
