--- a/examples/wcf/client-netframework/Examples.Wcf.Client.NetFramework.csproj
+++ b/examples/wcf/client-netframework/Examples.Wcf.Client.NetFramework.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="$(RepoRoot)\src\OpenTelemetry.Contrib.Instrumentation.Wcf\OpenTelemetry.Instrumentation.Wcf.csproj" />
+    <ProjectReference Include="$(RepoRoot)\src\OpenTelemetry.Instrumentation.Wcf\OpenTelemetry.Instrumentation.Wcf.csproj" />
   </ItemGroup>
 
   <ItemGroup>
