--- a/test/OpenTelemetry.Instrumentation.MySqlData.Tests/OpenTelemetry.Instrumentation.MySqlData.Tests.csproj
+++ b/test/OpenTelemetry.Instrumentation.MySqlData.Tests/OpenTelemetry.Instrumentation.MySqlData.Tests.csproj
@@ -20,7 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="$(RepoRoot)\src\OpenTelemetry.Contrib.Instrumentation.MySqlData\OpenTelemetry.Instrumentation.MySqlData.csproj" />
+      <ProjectReference Include="$(RepoRoot)\src\OpenTelemetry.Instrumentation.MySqlData\OpenTelemetry.Instrumentation.MySqlData.csproj" />
     </ItemGroup>
 
 </Project>
