Rename PersistentStorage Extension

--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -13,12 +13,12 @@ components:
     - codeblanch
   src/OpenTelemetry.Contrib.Instrumentation.MySqlData/:
     - moonheart
-  src/OpenTelemetry.Contrib.Extensions.PersistentStorage/:
-    - vishweshbankwar
   src/OpenTelemetry.Contrib.Preview/:
     - codeblanch
   src/OpenTelemetry.Exporter.Stackdriver/:
     - SergeyKanzhelev
+  src/OpenTelemetry.Extensions.PersistentStorage/:
+    - vishweshbankwar
   src/OpenTelemetry.Instrumentation.ElasticsearchClient/:
     - ejsmith
   src/OpenTelemetry.Instrumentation.Quartz/:
@@ -37,12 +37,12 @@ components:
     - codeblanch
   test/OpenTelemetry.Contrib.Instrumentation.MySqlData.Tests/:
     - moonheart
-  test/OpenTelemetry.Contrib.Extensions.PersistentStorage.Tests/:
-    - vishweshbankwar
   test/OpenTelemetry.Contrib.Preview.Tests/:
     - codeblanch
   test/OpenTelemetry.Exporter.Stackdriver.Tests/:
     - SergeyKanzhelev
+  test/OpenTelemetry.Extensions.PersistentStorage.Tests/:
+    - vishweshbankwar
   test/OpenTelemetry.Instrumentation.ElasticsearchClient.Tests/:
     - ejsmith
   test/OpenTelemetry.Instrumentation.Quartz.Tests/:
