--- a/test/OpenTelemetry.Extensions.PersistentStorage.Tests/OpenTelemetry.Extensions.PersistentStorage.Tests.csproj
+++ b/test/OpenTelemetry.Extensions.PersistentStorage.Tests/OpenTelemetry.Extensions.PersistentStorage.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\OpenTelemetry.Contrib.Extensions.PersistentStorage\OpenTelemetry.Contrib.Extensions.PersistentStorage.csproj" />
+    <ProjectReference Include="..\..\src\OpenTelemetry.Extensions.PersistentStorage\OpenTelemetry.Extensions.PersistentStorage.csproj" />
   </ItemGroup>
 
 </Project>
