--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -5,8 +5,6 @@ components:
   src/OpenTelemetry.Contrib.Extensions.AWSXRay/:
     - srprash
     - lupengamzn
-  src/OpenTelemetry.Contrib.Instrumentation.MassTransit/:
-    - alexvaluyskiy
   src/OpenTelemetry.Contrib.Preview/:
     - codeblanch
   src/OpenTelemetry.Exporter.Stackdriver/:
@@ -17,6 +15,8 @@ components:
     - ejsmith
   src/OpenTelemetry.Instrumentation.GrpcCore/:
     - pcwiese
+  src/OpenTelemetry.Instrumentation.MassTransit/:
+    - alexvaluyskiy
   src/OpenTelemetry.Instrumentation.MySqlData/:
     - moonheart
   src/OpenTelemetry.Instrumentation.Owin/:
@@ -29,8 +29,6 @@ components:
   test/OpenTelemetry.Contrib.Extensions.AWSXRay.Tests/:
     - srprash 
     - lupengamzn
-  test/OpenTelemetry.Contrib.Instrumentation.MassTransit.Tests/:
-    - alexvaluyskiy
   test/OpenTelemetry.Contrib.Preview.Tests/:
     - codeblanch
   test/OpenTelemetry.Exporter.Stackdriver.Tests/:
@@ -41,6 +39,8 @@ components:
     - ejsmith
   test/OpenTelemetry.Instrumentation.GrpcCore.Tests/:
     - pcwiese
+  test/OpenTelemetry.Instrumentation.MassTransit.Tests/:
+    - alexvaluyskiy
   test/OpenTelemetry.Instrumentation.MySqlData.Tests/:
     - moonheart
   test/OpenTelemetry.Instrumentation.Owin.Tests/:
