--- a/src/OpenTelemetry.Instrumentation.GrpcCore/OpenTelemetry.Instrumentation.GrpcCore.csproj
+++ b/src/OpenTelemetry.Instrumentation.GrpcCore/OpenTelemetry.Instrumentation.GrpcCore.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="[3.6.1,4.0)" />
-    <PackageReference Include="Grpc" Version="[2.23.0,3.0)" />
+    <PackageReference Include="Grpc.Core.Api" Version="[2.23.0,3.0)" />
     <PackageReference Include="OpenTelemetry.Api" Version="1.1.0" />
   </ItemGroup>
 </Project>
