--- a/.github/workflows/package-Preview.yml
+++ b/.github/workflows/package-Preview.yml
@@ -1,4 +1,4 @@
-name: Pack OpenTelemetry.Contrib.Preview
+name: Pack OpenTelemetry.Extensions
 
 on:
   workflow_dispatch:
@@ -9,13 +9,13 @@ on:
         default: 'warning'
   push:
     tags:
-      - 'Preview-*' # trigger when we create a tag with prefix "Preview-"
+      - 'Extensions-*' # trigger when we create a tag with prefix "Extensions-"
 
 jobs:
   build-test-pack:
     runs-on: ${{ matrix.os }}
     env:
-      PROJECT: OpenTelemetry.Contrib.Preview
+      PROJECT: OpenTelemetry.Extensions
 
     strategy:
       matrix:
@@ -36,7 +36,7 @@ jobs:
       run: dotnet test test/${{env.PROJECT}}.Tests
 
     - name: dotnet pack ${{env.PROJECT}}
-      run: dotnet pack src/${{env.PROJECT}} --configuration Release #--no-build <- OpenTelemetry.Contrib.Preview has a conditional net5.0 target which causes dotnet pack to break when -no-build is used (for some reason)
+      run: dotnet pack src/${{env.PROJECT}} --configuration Release #--no-build <- OpenTelemetry.Extensions has a conditional net5.0 target which causes dotnet pack to break when -no-build is used (for some reason)
 
     - name: Publish Artifacts
       uses: actions/upload-artifact@v2
