PR Review Comments
(cherry picked from commit 0b5d9a9360c35e5db93f92e22fbea5f43b1adfd0)

--- a/src/OpenTelemetry.Contrib.Extensions.AWSXRay/OpenTelemetry.Contrib.Extensions.AWSXRay.csproj
+++ b/src/OpenTelemetry.Contrib.Extensions.AWSXRay/OpenTelemetry.Contrib.Extensions.AWSXRay.csproj
@@ -16,6 +16,7 @@
     <Compile Remove="Resources\AWSEKSResourceDetector.cs" />
     <Compile Remove="Resources\AWSLambdaResourceDetector.cs" />
     <Compile Remove="Resources\Http\Handler.cs" />
+    <Compile Remove="Resources\Http\ServerCertificateValidationProvider.cs" />
   </ItemGroup>
 
 </Project>
