--- a/src/OpenTelemetry.Instrumentation.Hangfire/OpenTelemetry.Instrumentation.Hangfire.csproj
+++ b/src/OpenTelemetry.Instrumentation.Hangfire/OpenTelemetry.Instrumentation.Hangfire.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Description>OpenTelemetry Hangfire Instrumentation</Description>
+    <PackageTags>$(PackageTags);Hangfire</PackageTags>
+    <MinVerTagPrefix>Instrumentation.Hangfire-</MinVerTagPrefix>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Hangfire.Core" Version="[1.7.0,1.8.0)" />
-    <PackageReference Include="OpenTelemetry" Version="1.1.0" />
+    <PackageReference Include="OpenTelemetry.Api" Version="1.1.0" />
   </ItemGroup>
-  
 </Project>
