--- a/test/OpenTelemetry.Exporter.Geneva.UnitTest/OpenTelemetry.Exporter.Geneva.UnitTest.csproj
+++ b/test/OpenTelemetry.Exporter.Geneva.UnitTest/OpenTelemetry.Exporter.Geneva.UnitTest.csproj
@@ -3,9 +3,9 @@
   <PropertyGroup>
     <Description>Unit test project for Geneva Exporters for OpenTelemetry</Description>
     <IsPackable>false</IsPackable>
+    <TargetFrameworks>netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
+    <TargetFrameworks Condition="$(OS) == 'Windows_NT'">$(TargetFrameworks);net461;net462;net47;net471;net472;net48</TargetFrameworks>
   </PropertyGroup>
-
-  <Import Project="..\..\src\App.TargetFrameworks.proj" />
 
   <ItemGroup>
     <Content Include="xunit.runner.json">
@@ -35,7 +35,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
-    <PackageReference Include="OpenTelemetry.Exporter.InMemory" Version="1.2.0-rc2"/>
+    <PackageReference Include="OpenTelemetry.Exporter.InMemory" Version="1.2.0-rc2" />
   </ItemGroup>
 
   <ItemGroup>
