--- a/test/OpenTelemetry.Exporter.Geneva.UnitTest/OpenTelemetry.Exporter.Geneva.UnitTest.csproj
+++ b/test/OpenTelemetry.Exporter.Geneva.UnitTest/OpenTelemetry.Exporter.Geneva.UnitTest.csproj
@@ -5,13 +5,8 @@
     <IsPackable>false</IsPackable>
     <TargetFrameworks>netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
     <TargetFrameworks Condition="$(OS) == 'Windows_NT'">$(TargetFrameworks);net461;net462;net47;net471;net472;net48</TargetFrameworks>
+    <NoWarn>$(NoWarn),SA1633</NoWarn>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Content Include="xunit.runner.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="3.1.0">
