--- a/test/OpenTelemetry.Contrib.Instrumentation.AWSLambda.Tests/OpenTelemetry.Contrib.Instrumentation.AWSLambda.Tests.csproj
+++ b/test/OpenTelemetry.Contrib.Instrumentation.AWSLambda.Tests/OpenTelemetry.Contrib.Instrumentation.AWSLambda.Tests.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\OpenTelemetry.Contrib.Instrumentation.AWSLambda\OpenTelemetry.Contrib.Instrumentation.AWSLambda.csproj" />
+    <ProjectReference Include="$(RepoRoot)\src\OpenTelemetry.Contrib.Instrumentation.AWSLambda\OpenTelemetry.Contrib.Instrumentation.AWSLambda.csproj" />
   </ItemGroup>
 
 </Project>
