--- a/test/OpenTelemetry.Extensions.PersistentStorage.Tests/OpenTelemetry.Extensions.PersistentStorage.Tests.csproj
+++ b/test/OpenTelemetry.Extensions.PersistentStorage.Tests/OpenTelemetry.Extensions.PersistentStorage.Tests.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\OpenTelemetry.Extensions.PersistentStorage\OpenTelemetry.Extensions.PersistentStorage.csproj" />
+    <ProjectReference Include="$(RepoRoot)\src\OpenTelemetry.Extensions.PersistentStorage\OpenTelemetry.Extensions.PersistentStorage.csproj" />
   </ItemGroup>
 
 </Project>
