not needed usings

--- a/.editorconfig
+++ b/.editorconfig
@@ -64,6 +64,7 @@ dotnet_naming_symbols.constant_fields.required_modifiers          = const
 # C# Coding Conventions       # 
 ############################### 
 [*.cs] 
+dotnet_diagnostic.IDE0005.severity = warning
 # var preferences 
 csharp_style_var_for_built_in_types = true:silent 
 csharp_style_var_when_type_is_apparent = true:silent 
