--- a/src/OpenTelemetry.Contrib.Instrumentation.AWSLambda/OpenTelemetry.Contrib.Instrumentation.AWSLambda.csproj
+++ b/src/OpenTelemetry.Contrib.Instrumentation.AWSLambda/OpenTelemetry.Contrib.Instrumentation.AWSLambda.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="OpenTelemetry.Contrib.Extensions.AWSXRay" Version="1.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Include="$(RepoRoot)\src\OpenTelemetry.Internal\Guard.cs" Link="Includes\Guard.cs" />
+  </ItemGroup>
+
 </Project>
