--- a/src/OpenTelemetry.Instrumentation.Hangfire/OpenTelemetry.Instrumentation.Hangfire.csproj
+++ b/src/OpenTelemetry.Instrumentation.Hangfire/OpenTelemetry.Instrumentation.Hangfire.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Hangfire.Core" Version="[1.7.0,1.8.0)" />
     <PackageReference Include="OpenTelemetry.Api" Version="1.2.0-rc4" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="$(RepoRoot)\src\OpenTelemetry.Internal\Guard.cs" Link="Includes\Guard.cs" />
+  </ItemGroup>
 </Project>
