Add OpenTelemetry.Instrumentation.Runtime component

--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -32,6 +32,8 @@ components:
     - codeblanch
   src/OpenTelemetry.Instrumentation.Quartz/:
     - maldago
+  src/OpenTelemetry.Instrumentation.Runtime/:
+    - xiang17
   src/OpenTelemetry.Instrumentation.Wcf/:
     - codeblanch
 
