--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -33,6 +33,7 @@ components:
   src/OpenTelemetry.Instrumentation.Quartz/:
     - maldago
   src/OpenTelemetry.Instrumentation.Runtime/:
+    - twenzel
     - xiang17
   src/OpenTelemetry.Instrumentation.Wcf/:
     - codeblanch
@@ -81,5 +82,8 @@ components:
     - codeblanch
   test/OpenTelemetry.Instrumentation.Quartz.Tests/:
     - maldago
+  test/OpenTelemetry.Instrumentation.Runtime.Tests/:
+    - twenzel
+    - xiang17
   test/OpenTelemetry.Instrumentation.Wcf.Tests/:
     - codeblanch
